--- a/index.html
+++ b/index.html
@@ -383,26 +383,28 @@
             <li class="footer__item">Контакты</li>
           </ul>
 
-          <div class="footer-block1__item item1">
-            <img src="./images/house.svg" alt="" />
-            <p>г. Мариуполь, проспект Победы, 48а</p>
-          </div>
-          <div class="footer-block1__item item2">
-            <img class="footer-item2__img" src="./images/phone.svg" alt="" />
-            <a href="tel:(067)6347574">(067) 634 -75 - 74</a>
+          <div class="footer__wrap">
+            <div class="footer-block1__item footer__item1">
+              <img src="./images/house.svg" alt="" />
+              <p>
+                г. Мариуполь, проспект <br />
+                Победы, 48а
+              </p>
+            </div>
+            <div class="footer-block1__item footer__item2">
+              <img class="footer-item2__img" src="./images/phone.svg" alt="" />
+              <a href="tel:(067)6347574">(067) 634 -75 - 74</a>
 
-            <img class="footer-itemimg1" src="./images/Ellipse.svg" alt="" />
-            <a href="tel:(0637)570131">(0637) 57 - 01 - 31</a>
-            <img class="footer-itemimg1" src="./images/Ellipse.svg" alt="" />
-            <a href="tel:(098)2664389">(098) 266 - 43 - 89</a>
-          </div>
-          <div class="footer-block1__item item3">
-            <img src="./images/calendar.svg" alt="" />
-            <a href="calendar:Пн - Пт 8:00 - 18:00">Пн - Пт 8:00 - 18:00</a>
-            <a href="calendar:СбВс8:0014:00">Сб - Вс 8:00 - 14:00</a>
-          </div>
+              <a href="tel:(0637)570131">(0637) 57 - 01 - 31</a>
 
-          <img class="hamburger-btn" src="./images/hamburger-btn.svg" alt="" />
+              <a href="tel:(098)2664389">(098) 266 - 43 - 89</a>
+            </div>
+            <div class="footer-block1__item footer__item3">
+              <img src="./images/calendar.svg" alt="" />
+              <a href="calendar:Пн - Пт 8:00 - 18:00">Пн - Пт 8:00 - 18:00</a>
+              <a href="calendar:СбВс8:0014:00">Сб - Вс 8:00 - 14:00</a>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
